--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,13 @@
     --light-slate-color: #8E8F99;
 }
 
-h1, h2, h3, h4, h5, h6, p {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
     margin: 0;
     padding: 0;
 }
@@ -23,39 +29,93 @@ body {
     letter-spacing: 0.02em;
 }
 
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    padding: 0;
-    overflow: hidden;
-    border: 0;
-    clip: rect(0 0 0 0);
-}
-
-/* ========= Components ========= */
-.container {
-    width: 1158px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-    text-align: center;
-
-    /* outline: 2px solid tomato; */
-}
-
-.section {
-    padding-bottom: 120px;
-    padding-top: 120px;
-}
-
 .list {
     padding: 0;
     margin: 0;
 
     list-style: none;
+}
+
+/* ========= Components ========= */
+.container {
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+@media screen and (min-width: 320px) {
+    .section {
+        padding-bottom: 96px;
+        padding-top: 96px;
+    }
+
+    .advantages-section {
+        padding-bottom: 24px;
+    }
+
+    .container {
+        width: 415px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+    }
+
+    .list-header {
+        margin-bottom: 8px;
+
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.11;
+
+        color: var(--navy-blue-color);
+    }
+
+    .list-text {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        text-align: left;
+        color: var(--slate-color);
+    }
+
+    .advantages-item:not(:last-child) {
+        margin-bottom: 72px;
+    }
+
+    .examples-section {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .container {
+        width: 768px;
+    }
+
+    .advantages-section {
+        padding-bottom: 96px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .section {
+        padding-bottom: 120px;
+        padding-top: 120px;
+    }
+
+    .container {
+        width: 1158px;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    .advantages-section {
+        padding-bottom: 120px;
+    }
+
+    .list-header {
+        font-size: 20px;
+        line-height: 1.2;
+    }
 }
 
 .bgc {
@@ -75,19 +135,9 @@ body {
     color: var(--navy-blue-color);
 }
 
-.list-header {
-    margin-bottom: 8px;
 
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
 
-    color: var(--navy-blue-color);
-}
 
-.list-text {
-    color: var(--slate-color);
-}
 
 .button {
     font-family: 'Roboto', sans-serif;
@@ -127,10 +177,205 @@ body {
         0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+/* ========= Mobile Menu ========= */
+@media screen and (max-width: 767px) {
+    .menu {
+        display: none;
+    }
+
+    .contact {
+        display: none;
+    }
+
+    .header-container {
+        display: flex;
+        justify-content: space-between;
+        padding-top: 24px;
+        padding-bottom: 24px;
+    }
+
+    .mobile-menu-open {
+        background-color: transparent;
+        border: none;
+        padding: 0;
+        line-height: 0;
+    }   
+
+    .mobile-menu {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        z-index: 1000;
+        top: 0;
+        left: 0;
+        background-color: #FFFFFF;
+
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+    .mobile-menu.is-open {
+        opacity: 1;
+        visibility: visible;
+        pointer-events: auto;
+    }
+
+    .mobile-menu__container {
+        position: relative;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding-left: 40px;
+        padding-right: 16px;
+        padding-top: 80px;
+        padding-bottom: 40px;
+    }
+
+    .mobile-menu__close-btn {
+        position: absolute;
+        top: 40px;
+        right: 40px;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        width: 24px;
+        height: 24px;
+        border-radius: 50%;
+        background: #E7E9FC;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        padding: 0;
+
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .mobile-menu__close-icon {
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .mobile-menu__close-btn:hover,
+    .mobile-menu__close-btn:focus {
+        border-color: #404BBF;
+        background-color: var(--ocean-color);
+    }
+
+    .mobile-menu__close-btn:hover .mobile-menu__close-icon,
+    .mobile-menu__close-btn:focus .mobile-menu__close-icon {
+        fill: #FFFFFF;
+    }
+
+    .mobile-menu-link {
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.11;
+    }
+
+    .mobile-menu-item:not(:last-child) {
+        padding-bottom: 40px;
+    }
+
+    .mobile-contact-list {
+        margin-bottom: 48px;
+    }
+
+    .mobile-tel {
+        font-size: 36px;
+        line-height: 1.11;
+        font-weight: 600;
+        color: var(--iris-color);
+
+    }
+
+    .mobile-contact-item {
+        margin-bottom: 40px;
+    }
+
+    .mobile-email {
+        font-size: 20px;
+        line-height: 1.2;
+    }
+}
+
+/* =========== Tablet Styles ========== */
+@media screen and (min-width: 768px) {
+    .mobile-menu {
+        display: none;
+    }
+
+    .mobile-menu-open {
+        display: none;
+    }
+
+    .main-header {
+        padding-top: 24px;
+        padding-bottom: 10px;
+        border-bottom: 1px solid var(--cornflower-color);
+    }
+
+    .nav-header {
+        display: flex;
+        box-sizing: border-box;
+        width: 100%;
+        justify-content: space-between;
+        align-items: start;
+    }
+
+    .contact {
+        display: block;
+    }
+
+    .menu {
+        display: flex;
+    }
+
+    .menu-item:not(:last-of-type) {
+        margin-right: 40px;
+    }
+
+    .menu-item {
+        position: relative;
+    }
+
+}
+
+/* ========== Desktop Styles ========== */
+@media screen and (min-width: 1200px) {
+    .main-header {
+        padding-bottom: 24px;
+    }
+
+    .contact {
+        display: flex;
+        margin-left: auto;
+    }
+
+    .logo {
+        margin-right: 76px;
+    }
+
+    .contact-menu-item:not(:last-of-type) {
+        margin-right: 40px;
+    }
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    border: 0;
+    clip: rect(0 0 0 0);
+}
+
 /* ========= Logo ========= */
 .logo {
-    margin-right: 76px;
-
     font-family: 'Raleway', sans-serif;
     color: var(--navy-blue-color);
     font-size: 18px;
@@ -143,42 +388,9 @@ body {
     color: var(--iris-color);
 }
 
-/* ========= Header ========= */
-.main-header {
-    padding-top: 0;
-    padding-bottom: 0;
-    border-bottom: 1px solid var(--cornflower-color);
-}
-
-.nav-header {
-    display: flex;
-    box-sizing: border-box;
-    padding-top: 24px;
-    padding-bottom: 24px;
-}
-
-.menu {
-    display: flex;
-}
-
-.menu-item:not(:last-of-type) {
-    margin-right: 40px;
-}
-
-.menu-item {
-    position: relative;
-}
-
-.contact {
-    display: flex;
-    margin-left: auto;
-}
-
+/* =========== Link Style ========== */
 .link {
     text-decoration: none;
-}
-
-.link {
     color: var(--navy-blue-color);
     font-weight: 500;
 
@@ -194,6 +406,7 @@ body {
     color: var(--ocean-color);
 }
 
+/*  
 .active-page {
     color: var(--ocean-color);
 }
@@ -208,20 +421,80 @@ body {
     height: 4px;
     border-radius: 2px;
     background-color: var(--ocean-color);
-}
+} */
 
 /* ========= Hero ========= */
 .hero-section {
     background-color: var(--navy-blue-color);
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)),
-        url("../images/people-office.jpg");
-    max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 188px;
-    padding-bottom: 188px;
+    padding-top: 112px;
+    background-repeat: no-repeat;
+    background-position: center top;
+}
+
+@media screen and (min-width: 320px) {
+    .hero-section {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+                url("../images/hero-image-mobile.jpg");
+        max-width: 415px;
+        /* max-height: 432px; */
+        padding-bottom: 112px;
+    }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 320px), 
+    screen and(min-resolution: 192dpi) and (min-width: 320px), 
+    screen and (min-resolution: 2dppx) and (min-width: 320px) {
+    .hero-section {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+            url("../images/hero-image-mobile@2x.jpg");
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .hero-section {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+            url("../images/hero-image-tablet.jpg");
+        max-width: 768px;
+        /* max-height: 436px; */
+        padding-bottom: 108px;
+    }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+    screen and(min-resolution: 192dpi) and (min-width: 768px),
+    screen and (min-resolution: 2dppx) and (min-width: 768px) {
+    .hero-section {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+            url("../images/hero-image-tablet@2x.jpg");
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .hero-section {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+            url("../images/hero-image-desktop.jpg");
+        max-width: 1440px;
+        /* max-height: 600px; */
+        padding-top: 188px;
+        padding-bottom: 188px;
+    }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+    screen and(min-resolution: 192dpi) and (min-width: 1200px),
+    screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+    .hero-section {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+            url("../images/hero-image-desktop@2x.jpg");
+    }
 }
 
 .hero-title {
@@ -235,7 +508,22 @@ body {
     font-size: 56px;
     line-height: 1.071;
     text-align: center;
-    /* letter-spacing: 0.02em; */
+}
+
+@media screen and (max-width: 768px) {
+    .hero-title {
+        width: 308px;
+        margin-bottom: 72px;
+        font-size: 36px;
+        line-height: 1.11;
+    }
+
+    .effective-solutions {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 158px;
+    }
 }
 
 .button-order {
@@ -248,40 +536,75 @@ body {
 }
 
 /* ========= Advantages ========= */
-.advantages {
-    display: flex;
-    text-align: left;
+@media screen and (min-width: 320px) {
+    .thumb {
+        display: none;
+    }
 }
 
-.advantages-item {
-    width: 264px;
+@media screen and (min-width: 768px) {
+    .advantages {
+        display: flex;
+        text-align: left;
+        flex-wrap: wrap;
+    }
+
+    .advantages-item {
+        width: 356px;
+    }
+
+    .advantages-item:not(:last-child) {
+        margin-bottom: 0;
+    }
+
+    .advantages-item:not(:nth-child(2n)) {
+        margin-right: 24px;
+    }
+
+    .advantages-item:not(:nth-child(n + 2)) {
+        margin-bottom: 72px;
+    }
 }
 
-.advantages-item:not(:last-of-type) {
-    margin-right: 24px;
-}
+@media screen and (min-width: 1200px) {
+    .thumb {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 264px;
+        height: 112px;
+        background-color: var(--cloud-color);
+        margin-bottom: 8px;
+    }
 
-.thumb {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 264px;
-    height: 112px;
-    background-color: var(--cloud-color);
-    margin-bottom: 8px;
+    .advantages-item {
+        width: 264px;
+    }
+
+    .advantages-item:not(:last-of-type) {
+        margin-right: 24px;
+    }
+
+    .advantages-item:not(:nth-child(n + 2)) {
+        margin-bottom: 0;
+    }
 }
 
 /* ========= Work Examples ========= */
-.examples-section {
-    padding-top: 0;
-}
-.examples-list {
-    display: flex;
-    justify-content: space-between;
-}
+@media screen and (min-width: 1200px) {
+    .examples-section {
+        display: flex;
+        padding-top: 0;
+    }
 
-.no-gap {
-    display: block;
+    .examples-list {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .no-gap {
+        display: block;
+    }
 }
 
 /* ========= Our Team ========= */
@@ -289,20 +612,20 @@ body {
     background-color: var(--cloud-color);
 }
 
-.team-member-card {
+/* .team-member-card {
     background-color: var(--white-color);
     box-shadow: 
         0px 1px 6px rgba(46, 47, 66, 0.08), 
         0px 1px 1px rgba(46, 47, 66, 0.16), 
         0px 2px 1px rgba(46, 47, 66, 0.08);
-}
+} */
 
-.team-list {
+/* .team-list {
     display: flex;
     justify-content: space-between;
-}
+} */
 
-.team-member-details {
+/* .team-member-details {
     padding-top: 32px;
     padding-bottom: 32px;
     padding-left: 16px;
@@ -312,7 +635,7 @@ body {
 .social {
     margin-top: 8px;
 }
-
+*/
 .social-networks {
     display: flex;
     justify-content: space-between;
@@ -340,8 +663,12 @@ body {
     background-color: var(--ocean-color);
 }
 
+.social-mobile {
+    padding-right: 44px;
+}
+
 /* ========= Customers ========= */
-.customers-section {
+/* .customers-section {
     padding-top: 130px;
 }
 
@@ -384,10 +711,10 @@ body {
 .customer-logo:hover .customer-logo-icon,
 .customer-logo:focus .customer-logo-icon {
     fill: var(--ocean-color);
-}
+} */
 
 /* ========= Footer ========= */
-.footer-section {
+/* .footer-section {
     padding-left: 15px;
     padding-right: 15px;
     padding-top: 100px;
@@ -410,13 +737,13 @@ body {
 }
 
 .footer-text {
-    margin-top: 16px;
+    margin-top: 16px; */
     /* letter-spacing: 0.02em; */
 
-    color: var(--cornflower-color);
-}
+    /* color: var(--cornflower-color);
+} */
 
-.footer-p {
+/* .footer-p {
     margin-bottom: 16px;
 
     font-size: 16px;
@@ -482,10 +809,10 @@ body {
 
 .subscribe-span {
     margin-right: 16px;
-}
+} */
 
 /* ========= Portfolio ========= */
-.projects .link {
+/* .projects .link {
     text-decoration: none;
 }
 
@@ -565,10 +892,10 @@ body {
 .project-item-link:hover .overlay,
 .project-item-link:focus .overlay {
     transform: translate(0, 0);
-}
+} */
 
 /* =========== Modal Window ========== */
-.backdrop {
+/* .backdrop {
     position: fixed;
     top: 0;
     left: 0;
@@ -636,10 +963,10 @@ body {
 .modal-close-btn:hover .modal-close-btn-icon,
 .modal-close-btn:focus .modal-close-btn-icon {
     fill: #FFFFFF;
-}
+} */
 
 /* ========== Modal Form ========== */
-.modal>p {
+/* .modal>p {
     font-weight: 500;
     text-align: center;
     margin-bottom: 14px;
@@ -783,4 +1110,4 @@ body {
 .modal-form-submit:focus {
     border-color: #404BBF;
     background-color: var(--ocean-color);
-}
+} */
