--- a/css/styles.css
+++ b/css/styles.css
@@ -378,6 +378,7 @@ body {
 .logo {
     font-family: 'Raleway', sans-serif;
     color: var(--navy-blue-color);
+    font-weight: 800;
     font-size: 18px;
     line-height: 1.33;
     letter-spacing: 0.03em;
@@ -778,21 +779,8 @@ body {
 }
 
 /* ========= Footer ========= */
-/* .footer-section {
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 100px;
-    padding-bottom: 100px;
-}
-
-.footer-container {
-    display: flex;
-}
-
 .footer {
     width: 264px;
-    text-align: left;
-    margin-right: 120px;
 }
 
 .footer-logo {
@@ -801,20 +789,16 @@ body {
 }
 
 .footer-text {
-    margin-top: 16px; */
-    /* letter-spacing: 0.02em; */
+    margin-top: 16px;
+    color: var(--cornflower-color);
+    text-align: left;
+} 
 
-    /* color: var(--cornflower-color);
-} */
-
-/* .footer-p {
+.footer-p {
     margin-bottom: 16px;
-
     font-size: 16px;
     line-height: 1.5;
-    font-weight: 500;
-    text-align: left;
-    color: var(--white-color);
+    color: var(--cornflower-color);
 }
 
 .social-footer {
@@ -838,17 +822,11 @@ body {
     background-color: #31D0AA;
 }
 
-.subscribe {
-    margin-left: auto;
-}
-
 .email {
-    width: 264px;
     height: 40px;
     padding-left: 16px;
     padding-top: 8px;
     padding-bottom: 8px;
-    margin-right: 24px;
 
     color: var(--cloud-color);
 
@@ -857,26 +835,122 @@ body {
     background-color: var(--navy-blue-color);
 }
 
-.subscribe-form {
-    display: flex;
-}
-
 .subscribe-button {
     display: flex;
     padding: 8px 24px;
     border: 0;
     border-radius: 4px;
-    
+
     background-color: var(--iris-color);
     color: var(--white-color);
 }
 
 .subscribe-span {
     margin-right: 16px;
-} */
+}
+
+.social-networks-footer {
+    display: flex;
+}
+
+@media screen and (min-width: 320px) {
+    .footer-section {
+        padding-top: 96px;
+        padding-bottom: 96px;
+    }
+
+    .footer {
+        margin-bottom: 72px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .footer-logo {
+        text-align: center;
+    }
+
+    .smedia-footer {
+        margin-bottom: 72px;
+    }
+
+    .footer-p {
+        text-align: center;
+    }
+
+    .social-networks-footer {
+        justify-content: center;
+    }
+
+    .email {
+        margin-bottom: 16px;
+        margin-right: 0;
+        width: 100%;
+    }
+
+    .subscribe-button {
+        margin-right: auto;
+        margin-left: auto;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .footer {
+        text-align: left;
+        margin-left: 108px;
+        margin-right: 24px;
+    }
+
+    .footer-p {
+        text-align: left;
+    }
+
+    .subscribe-form {
+        display: flex;
+    }
+
+    .email {
+        margin-bottom: 0;
+        width: 264px;
+        margin-right: 24px;
+    }
+
+    .footer-container {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .subscribe {
+        margin-left: 108px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .footer-section {
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
+
+    .footer-container {
+        flex-wrap: nowrap;
+    }
+
+    .footer {
+        margin-bottom: 0;
+        margin-right: 120px;
+        margin-left: 0;
+    }
+
+    .smedia-footer {
+        margin-bottom: 0;
+    }
+
+    .subscribe {
+        margin-left: 80px;
+    }
+}
 
 /* ========= Portfolio ========= */
-/* .projects .link {
+.projects .link {
     text-decoration: none;
 }
 
@@ -956,10 +1030,10 @@ body {
 .project-item-link:hover .overlay,
 .project-item-link:focus .overlay {
     transform: translate(0, 0);
-} */
+}
 
 /* =========== Modal Window ========== */
-/* .backdrop {
+.backdrop {
     position: fixed;
     top: 0;
     left: 0;
@@ -1027,10 +1101,10 @@ body {
 .modal-close-btn:hover .modal-close-btn-icon,
 .modal-close-btn:focus .modal-close-btn-icon {
     fill: #FFFFFF;
-} */
+}
 
 /* ========== Modal Form ========== */
-/* .modal>p {
+.modal>p {
     font-weight: 500;
     text-align: center;
     margin-bottom: 14px;
@@ -1174,4 +1248,4 @@ body {
 .modal-form-submit:focus {
     border-color: #404BBF;
     background-color: var(--ocean-color);
-} */
+}
