--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ body {
         text-align: center;
     }
 
-    .list-header {
+    .advantages-list-header {
         margin-bottom: 8px;
 
         font-weight: 700;
@@ -69,7 +69,25 @@ body {
         color: var(--navy-blue-color);
     }
 
+    .list-header {
+        margin-bottom: 8px;
+
+        font-size: 20px;
+        line-height: 1.2;
+        font-weight: 500;
+
+        color: var(--navy-blue-color);
+    }
+
     .list-text {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        text-align: left;
+        color: var(--slate-color);
+    }
+
+    .advantages-list-text {
         font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
@@ -112,9 +130,15 @@ body {
         padding-bottom: 120px;
     }
 
-    .list-header {
+    .list-header,
+    .advantages-list-header {
         font-size: 20px;
         line-height: 1.2;
+        font-weight: 500;
+    }
+
+    .advantages-list-text {
+        font-weight: 400;
     }
 }
 
@@ -134,10 +158,6 @@ body {
 
     color: var(--navy-blue-color);
 }
-
-
-
-
 
 .button {
     font-family: 'Roboto', sans-serif;
@@ -269,12 +289,6 @@ body {
         fill: #FFFFFF;
     }
 
-    .mobile-menu-link {
-        font-weight: 700;
-        font-size: 36px;
-        line-height: 1.11;
-    }
-
     .mobile-menu-item:not(:last-child) {
         padding-bottom: 40px;
     }
@@ -400,6 +414,7 @@ body {
 
 .contact .link {
     color: var(--slate-color);
+    font-weight: 400;
 }
 
 .link:hover,
@@ -407,7 +422,7 @@ body {
     color: var(--ocean-color);
 }
 
-/*  
+ 
 .active-page {
     color: var(--ocean-color);
 }
@@ -422,7 +437,7 @@ body {
     height: 4px;
     border-radius: 2px;
     background-color: var(--ocean-color);
-} */
+}
 
 /* ========= Hero ========= */
 .hero-section {
@@ -439,9 +454,15 @@ body {
         background-image: linear-gradient(rgba(46, 47, 66, 0.7),
                 rgba(46, 47, 66, 0.7)),
                 url("../images/hero-image-mobile.jpg");
-        max-width: 415px;
+        width: 415px;
         /* max-height: 432px; */
         padding-bottom: 112px;
+    }
+
+    .mobile-menu-link {
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.11;
     }
 }
 
@@ -460,7 +481,7 @@ body {
         background-image: linear-gradient(rgba(46, 47, 66, 0.7),
                 rgba(46, 47, 66, 0.7)),
             url("../images/hero-image-tablet.jpg");
-        max-width: 768px;
+        width: 768px;
         /* max-height: 436px; */
         padding-bottom: 108px;
     }
@@ -481,7 +502,7 @@ body {
         background-image: linear-gradient(rgba(46, 47, 66, 0.7),
                 rgba(46, 47, 66, 0.7)),
             url("../images/hero-image-desktop.jpg");
-        max-width: 1440px;
+        width: 1440px;
         /* max-height: 600px; */
         padding-top: 188px;
         padding-bottom: 188px;
@@ -712,7 +733,6 @@ body {
 .customer-item {
     width: 168px;
     height: 88px;
-    margin-bottom: 72px;
 }
 
 @media screen and (min-width: 320px) {
@@ -729,6 +749,10 @@ body {
     .customer-item:not(:nth-child(2n)) {
         margin-right: 10px;
     }
+
+    .customer-item:not(:nth-child(n+4)) {
+        margin-bottom: 72px;
+    }
 }
 
 @media screen and (min-width: 768px) {
@@ -736,8 +760,20 @@ body {
         max-width: 680px;
     }
 
+    .customer-item:not(:nth-child(2n)) {
+        margin-right: 0;
+    }
+
     .customer-item:not(:nth-child(3n)) {
         margin-right: 24px;
+    }
+
+    .customer-item {
+        margin-bottom: 0;
+    }
+
+    .customer-item:not(:nth-child(n+3)) {
+        margin-bottom: 72px;
     }
 }
 
@@ -746,8 +782,20 @@ body {
         max-width: 1440px;
     }
 
+    .customer-item {
+        margin-bottom: 0;
+    }
+
     .customer-item:not(:last-child) {
         margin-right: 24px;
+    }
+
+    .customer-item:not(:nth-child(n+3)) {
+        margin-bottom: 0;
+    }
+
+    .customer-item:not(:nth-child(n+4)) {
+        margin-bottom: 0;
     }
 }
 
@@ -828,7 +876,10 @@ body {
     padding-top: 8px;
     padding-bottom: 8px;
 
-    color: var(--cloud-color);
+    font-size: 12px;
+    line-height: 2;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 0.6);
 
     border: 1px solid #FFFFFF4D;
     border-radius: 4px;
@@ -950,6 +1001,11 @@ body {
 }
 
 /* ========= Portfolio ========= */
+.section-portfolio {
+    padding-top: 96px;
+    padding-bottom: 120px;
+}
+
 .projects .link {
     text-decoration: none;
 }
@@ -957,7 +1013,7 @@ body {
 .filter-btn-list {
     display: flex;
     justify-content: center;
-    margin-top: 96px;
+    /* margin-top: 96px; */
     margin-bottom: 72px;
     margin-left: auto;
     margin-right: auto;
@@ -970,7 +1026,6 @@ body {
 .projects {
     display: flex;
     flex-wrap: wrap;
-    margin-bottom: 120px;
 }
 
 .project-footnote {
@@ -1013,7 +1068,6 @@ body {
     top: 0;
     width: 100%;
     height: 100%;
-    overflow-y: scroll;
     transform: translate(0, 100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -1061,7 +1115,7 @@ body {
     top: 50%;
     left: 50%;
     width: 408px;
-    height: 600px;
+    height: 584px;
     transform: scale(1) translate(-50%, -50%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -1094,6 +1148,7 @@ body {
 
 .modal-close-btn:hover,
 .modal-close-btn:focus {
+    cursor: pointer;
     border-color: #404BBF;
     background-color: var(--ocean-color);
 }
@@ -1101,6 +1156,12 @@ body {
 .modal-close-btn:hover .modal-close-btn-icon,
 .modal-close-btn:focus .modal-close-btn-icon {
     fill: #FFFFFF;
+}
+
+@media screen and (max-width: 480px) {
+    .modal {
+        width: 100%;
+    }
 }
 
 /* ========== Modal Form ========== */
@@ -1246,6 +1307,7 @@ body {
 
 .modal-form-submit:hover,
 .modal-form-submit:focus {
+    cursor: pointer;
     border-color: #404BBF;
     background-color: var(--ocean-color);
 }
