--- a/css/styles.css
+++ b/css/styles.css
@@ -303,7 +303,7 @@ body {
 
   .mobile-menu__container {
     position: relative;
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -515,11 +515,12 @@ body {
   margin-left: auto;
   margin-right: auto;
   padding-top: 112px;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center top;
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 479px) {
   .hero-section {
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
@@ -601,16 +602,21 @@ body {
 }
 
 .hero-title {
-  width: 494px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 48px;
-
   color: var(--white-color);
   font-weight: 700;
-  font-size: 56px;
+  
   line-height: 1.071;
   text-align: center;
+}
+
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .hero-title {
+    width: 100%;
+    font-size: 36px;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -620,6 +626,13 @@ body {
     font-weight: 700;
     font-size: 56px;
     line-height: 1.11;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-title {
+    width: 494px;
+    font-size: 56px;
   }
 }
 
@@ -684,6 +697,10 @@ body {
 
   .advantages-item:not(:nth-child(n + 2)) {
     margin-bottom: 0;
+  }
+
+  .contact .link {
+    font-size: 16px;
   }
 }
 
@@ -1217,15 +1234,40 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 408px;
-  height: 85%;
-  /* height: 584px; */
   border-radius: 4px;
   transform: scale(1) translate(-50%, -50%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   background-color: #fcfcfc;
   padding: 72px 24px 24px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .modal {
+    width: 100%;
+    height: 88%;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 408px;
+    height: 584px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 408px;
+    height: 584px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 408px;
+    height: 584px;
+  }
 }
 
 .modal-close-btn {
@@ -1260,12 +1302,6 @@ body {
 .modal-close-btn:hover .modal-close-btn-icon,
 .modal-close-btn:focus .modal-close-btn-icon {
   fill: #ffffff;
-}
-
-@media screen and (max-width: 479px) {
-  .modal {
-    width: 100%;
-  }
 }
 
 /* ========== Modal Form ========== */
@@ -1367,6 +1403,7 @@ body {
 .modal-form-check-desc {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
   font-size: 12px;
   line-height: 1.33;
