--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,10 @@ body {
   padding-right: 16px;
 }
 
+.social {
+  margin-top: 8px;
+}
+
 @media screen and (min-width: 320px) and (max-width: 479px) {
   .section {
     padding-bottom: 96px;
@@ -254,8 +258,49 @@ body {
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+/* =========== Link Style ========== */
+.link {
+  text-decoration: none;
+  color: var(--navy-blue-color);
+  font-weight: 500;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact .link {
+  color: var(--slate-color);
+  font-weight: 400;
+  font-size: 12px;
+}
+
+.link:hover,
+.link:focus {
+  color: var(--ocean-color);
+}
+
+.active-phone {
+  color: var(--ocean-color);
+}
+
+.active-page {
+  color: var(--ocean-color);
+}
+
+.active-page::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -25px;
+
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--ocean-color);
+}
+
 /* ========= Mobile Menu ========= */
-@media screen and (max-width: 767px) {
+
+@media screen and (min-width: 320px) {
   .menu {
     display: none;
   }
@@ -294,7 +339,7 @@ body {
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
       visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-
+  
   .mobile-menu.is-open {
     opacity: 1;
     visibility: visible;
@@ -351,13 +396,18 @@ body {
     padding-bottom: 40px;
   }
 
+  .mobile-menu-nav {
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.11;
+  }
+
   .mobile-contact-list {
     margin-bottom: 48px;
   }
 
   .mobile-tel {
     font-size: 27px;
-    /* font-size: 36px; */
     line-height: 1.11;
     font-weight: 600;
     color: var(--iris-color);
@@ -370,6 +420,35 @@ body {
   .mobile-email {
     font-size: 20px;
     line-height: 1.2;
+  }
+
+  .social-mobile {
+    padding-left: 40px;
+    padding-right: 60px;
+  }
+
+  .social {
+    margin-top: 0;
+  }
+
+  .social-networks {
+    justify-content: left;
+    gap: 24px;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .mobile-tel {
+    font-size: 36px;
+  }
+
+  .social {
+    margin-top: 0;
+  }
+
+  .social-networks {
+    justify-content: space-between;
+    gap: 0;
   }
 }
 
@@ -470,46 +549,6 @@ body {
   color: var(--iris-color);
 }
 
-/* =========== Link Style ========== */
-.link {
-  text-decoration: none;
-  color: var(--navy-blue-color);
-  font-weight: 500;
-
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.contact .link {
-  color: var(--slate-color);
-  font-weight: 400;
-  font-size: 12px;
-}
-
-.link:hover,
-.link:focus {
-  color: var(--ocean-color);
-}
-
-.active-phone {
-  color: var(--ocean-color);
-}
-
-.active-page {
-  color: var(--ocean-color);
-}
-
-.active-page::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: -25px;
-
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: var(--ocean-color);
-}
-
 /* ========= Hero ========= */
 .hero-section {
   background-color: var(--navy-blue-color);
@@ -608,12 +647,11 @@ body {
   margin-bottom: 48px;
   color: var(--white-color);
   font-weight: 700;
-  
   line-height: 1.071;
   text-align: center;
 }
 
-@media screen and (min-width: 320px) and (max-width: 479px) {
+@media screen and (min-width: 320px) {
   .hero-title {
     width: 100%;
     font-size: 36px;
@@ -624,16 +662,8 @@ body {
   .hero-title {
     width: 494px;
     margin-bottom: 72px;
-    font-weight: 700;
     font-size: 56px;
     line-height: 1.11;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .hero-title {
-    width: 494px;
-    font-size: 56px;
   }
 }
 
@@ -780,10 +810,6 @@ body {
   padding-right: 16px;
 }
 
-.social {
-  margin-top: 8px;
-}
-
 .social-networks {
   display: flex;
   justify-content: space-between;
@@ -809,10 +835,6 @@ body {
 .team-member-social-link:hover,
 .team-member-social-link:focus {
   background-color: var(--ocean-color);
-}
-
-.social-mobile {
-  padding-right: 44px;
 }
 
 /* ========= Customers ========= */
@@ -1246,13 +1268,13 @@ body {
 @media screen and (min-width: 320px) and (max-width: 479px) {
   .modal {
     width: 100%;
-    height: 88%;
+    height: 100%;
   }
 }
 
 @media screen and (min-width: 480px) {
   .modal {
-    width: 408px;
+    width: 392px;
     height: 586px;
   }
 }
@@ -1267,7 +1289,7 @@ body {
 @media screen and (min-width: 1200px) {
   .modal {
     width: 408px;
-    height: 586px;
+    height: 584px;
   }
 }
 
