mobile-menu fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -348,6 +348,7 @@ body {
 
   .mobile-menu__container {
     position: relative;
+    width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -422,13 +423,13 @@ body {
     line-height: 1.2;
   }
 
-  .social-mobile {
-    padding-left: 40px;
-    padding-right: 60px;
-  }
-
   .social {
     margin-top: 0;
+  }
+
+  .social-mobile {
+    padding-left: 0;
+    padding-right: 0;
   }
 
   .social-networks {
@@ -438,12 +439,22 @@ body {
 }
 
 @media screen and (min-width: 480px) and (max-width: 767px) {
+  .mobile-menu__container {
+      width: 100%;
+      height: 100%;
+    }
+  
   .mobile-tel {
     font-size: 36px;
   }
 
   .social {
     margin-top: 0;
+  }
+
+  .social-mobile {
+    padding-left: 40px;
+    padding-right: 60px;
   }
 
   .social-networks {
@@ -465,6 +476,11 @@ body {
   .logo {
     padding-top: 24px;
     padding-bottom: 24px;
+  }
+
+  .header-container {
+    padding-top: 0;
+    padding-bottom: 0;
   }
 
   .main-header {
@@ -1268,7 +1284,7 @@ body {
 @media screen and (min-width: 320px) and (max-width: 479px) {
   .modal {
     width: 100%;
-    height: 100%;
+    height: 88%;
   }
 }
 
